plugins {
    id 'java'
    id 'com.google.cloud.tools.jib' version '0.9.7'
}

sourceCompatibility = 1.8

jib {
    from {
        image = 'openjdk:8'
    }
    to {
        image = 'docker.sailthru.com/service/brandon-hello-service:0.1.1'
    }
    container {
        jvmFlags = [
                '-Dcom.sun.management.jmxremote',
                '-Dcom.sun.management.jmxremote.port=9004',
                '-Dcom.sun.management.jmxremote.local.only=false',
                '-Dcom.sun.management.jmxremote.authenticate=false',
                '-Dcom.sun.management.jmxremote.ssl=false',
                '-Djava.rmi.server.hostname=0.0.0.0',
                '-Dcom.sun.management.jmxremote.rmi.port=9004',
                '-XX:+UnlockExperimentalVMOptions',
                '-XX:+UseCGroupMemoryLimitForHeap'
        ]
        args = ['server', '/config/service.yml']
        ports = ['8080', '9004']
        useCurrentTimestamp = true
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'io.dropwizard', name: 'dropwizard-core', version: '1.3.2'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
